--- a/chat-frontend/src/app/chat-message/chat-message.component.css
+++ b/chat-frontend/src/app/chat-message/chat-message.component.css
@@ -211,3 +211,20 @@ background-color: rgba(0,0,0,0.2);
 margin-bottom: 15px !important;
 }
 }
+.user_img_msg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center; /* Center the image within the container */
+    border-radius: 50%; /* Apply a rounded shape for a circular image */
+  }
+  .attachment{
+    object-fit: cover;
+    object-position: center center;
+    border-radius: 50%; 
+    width: 20vw;
+    height:auto
+  }
+  .msg{
+    margin-left: 0.2vw;
+  }
