--- a/chat-frontend/src/app/chat-message/chat-message.component.html
+++ b/chat-frontend/src/app/chat-message/chat-message.component.html
@@ -9,9 +9,20 @@
     />
   </div>
   <div class="msg_cotainer">
-    {{ message?.text }}
+ 
     <span class="msg_time">8:40 AM, Today</span>
+    <div class="ms-3 " style="border-radius: 15px;" *ngIf="message?.attachment">
+      <div class="bg-image" *ngIf="message?.attachment">
+        <img src={{message?.attachment}} class="attachment"
+          style="border-radius: 15px;" alt="video">
+        <a href="#!">
+          <div class="mask"></div>
+        </a>
+      </div>
+    </div>
+ <p class="msg">   {{ message?.text }}</p>
   </div>
+  
 </div>
 <div
   *ngIf="message?.recipientId != targetUserID"
@@ -27,4 +38,8 @@
       class="rounded-circle user_img_msg"
     />
   </div>
+</div>
+<div class="d-flex flex-row justify-content-start mb-4">
+
+
 </div>
