--- a/chat-frontend/src/app/chat-messages/chat-messages.component.css
+++ b/chat-frontend/src/app/chat-messages/chat-messages.component.css
@@ -30,6 +30,11 @@ body,html{
 .card-footer{
 border-radius: 0 0 15px 15px !important;
     border-top: 0 !important;
+    z-index: 1;
+    position:relative;
+    top: 0vh;
+    width: 48vw;
+    margin-left: 1vw;
 }
 .container{
     align-content: center;
@@ -48,7 +53,7 @@ border-radius: 0 0 15px 15px !important;
     background-color: rgba(0,0,0,0.3) !important;
     border:0 !important;
     color:white !important;
-    height: 60px !important;
+    height: 40px !important;
     overflow-y: auto;
 }
     .type_msg:focus{
@@ -223,8 +228,16 @@ margin-bottom: 15px !important;
 }
 }
 .attach_btn{
-    height: 60px;
+    height: 40px;
 }
 .send_btn{
-    height: 60px;
+    height: 40px;
 }
+.user_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center; /* Center the image within the container */
+    border-radius: 50%; /* Apply a rounded shape for a circular image */
+  }
+  
