--- a/chat-frontend/src/app/chat-users/chat-users.component.html
+++ b/chat-frontend/src/app/chat-users/chat-users.component.html
@@ -23,24 +23,25 @@
           name=""
           class="form-control search"
           [(ngModel)]="searchText"
+
+          (keyup)="onKeyUp($event)"
         />
         <div class="input-group-prepend">
-          <span class="input-group-text search_btn" (click)="onClick()">
+          <span class="input-group-text search_btn" >
             <i class="fa fa-search"></i>
           </span>
         </div>
       </div>
     </div>
 
-    <div class="card">
+    <div class="card card-body contacts_body">
       <div class="card-body">
         <ul class="list-unstyled mb-0">
-          <app-chat-user *ngFor="let chatUser of chats?.conversations" [user]="users?.[chatUser.id]"
-          [id]="chatUser.id"></app-chat-user>
-
-
-
+          <li *ngFor="let userId of userIds">
+            <app-chat-user [user]="getUserById(userId)" [id]="userId"></app-chat-user>
+          </li>
         </ul>
+       
       </div>
     </div>
   </div>
