--- a/chat-frontend/src/app/chat/chat.component.html
+++ b/chat-frontend/src/app/chat/chat.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <section class="cont">
   <div class="container py-5">
     <div class="row">
@@ -8,3 +9,4 @@
     </div>
   </div>
 </section>
+</div>
