--- a/chat-frontend/src/app/login/login.component.html
+++ b/chat-frontend/src/app/login/login.component.html
@@ -41,7 +41,7 @@
         [icon]="'fa fa-key'"
       ></app-form-input>
     </div>
-    <div class="spans" type="button">
+    <div class="spans" type="button" (click)="onClick()">
       <span></span>
       <span></span>
       <span></span>
