--- a/chat-frontend/src/app/chat-user/chat-user.component.html
+++ b/chat-frontend/src/app/chat-user/chat-user.component.html
@@ -6,9 +6,9 @@
               <img [src]="user.avatar" class="rounded-circle user_img">
                 <span class="online_icon"></span>
             </div>
-            <div class="user_info">
-                <span>{{user.name}}</span>
-               
+            <div class="user_info" type="button">
+                <span type="button">{{user.name}}</span>
+              <p>{{lastMsg}}</p>
             </div>
         </div>
     </li>
