--- a/chat-frontend/src/app/chat/chat.component.html
+++ b/chat-frontend/src/app/chat/chat.component.html
@@ -1,12 +1,21 @@
-<div class="content">
-<section class="cont">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
-        <app-chat-users />
+
+
+
+<div>
+  <div class="content">
+    <section class="cont">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-md-6 col-lg-5 col-xl-4 mb-4 mb-md-0">
+            <app-chat-users />
+          </div>
+          <div class="col-md-6 col-lg-7 col-xl-8"><app-chat-messages /></div>
+        </div>
       </div>
-      <div class="col-md-6 col-lg-7 col-xl-8"><app-chat-messages /></div>
+    </section>
+    
     </div>
-  </div>
-</section>
+
 </div>
+
+
