--- a/chat-frontend/src/utilites/form-input/form-input.component.html
+++ b/chat-frontend/src/utilites/form-input/form-input.component.html
@@ -6,12 +6,15 @@
     </span>
   </div>
   <input
+  value="Default Value"
     type="text"
     [id]="label"
     [formControl]="control"
     [type]="type"
+    [(ngModel)]="default"
     [placeholder]="placeholder"
     class="form-control"
+
 
 
 
