--- a/chat-frontend/src/app/chat/chat.component.css
+++ b/chat-frontend/src/app/chat/chat.component.css
@@ -25,3 +25,15 @@
         background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
         position: relative;
     }
+    .centered-call {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9999; /* Set a higher z-index value than other elements */
+      }
+      
+      app-call{
+        z-index: 1;
+        position:inherit;
+      }
