--- a/chat-frontend/src/app/chat-users/chat-users.component.html
+++ b/chat-frontend/src/app/chat-users/chat-users.component.html
@@ -1,8 +1,8 @@
 <!-- chat-users.component.html -->
-<div class="card-body contacts_body">
-  <div class="settings-tray bd-highlight">
-    <div class="row align-items-center">
-      <div class="col-3 text-center">
+<div class="card-body contacts_body user-card" style="border-radius: 15px;margin-top: 1.4vh;">
+  <div class="settings-tray bd-highlight user-cards">
+    <div class="row align-items-center user-cards">
+      <div class="col-3 text-center user-cards">
         <img class="rounded-circle user_img" src="{{profilePic}}" alt="Profile img" />
       </div>
       <div class="col-9">
