--- a/chat-frontend/src/app/login/login.component.html
+++ b/chat-frontend/src/app/login/login.component.html
@@ -28,7 +28,7 @@
         [control]="$any(this.loginForm.get('emailId'))"
         placeholder="Email Address"
         [required]="true"
-        [default]="'elsa@email.com'"
+        [default]="'vibhusha@email.com'"
         [icon]="'fa fa-envelope'"
       ></app-form-input>
     </div>
@@ -36,7 +36,7 @@
       <app-form-input
         [type]="'password'"
         label="Password"
-        [default]="'elsa'"
+        [default]="'vibhusha'"
         [control]="$any(this.loginForm.get('password'))"
         placeholder="Password"
         [required]="true"
