--- a/chat-frontend/src/app/chat-messages/chat-messages.component.css
+++ b/chat-frontend/src/app/chat-messages/chat-messages.component.css
@@ -11,7 +11,8 @@ body,html{
     margin-bottom: auto;
 }
 .card{
-    height: 500px;
+    margin-top: 1.4vh;
+    height: 650px;
     border-radius: 15px !important;
     background-color: rgba(0,0,0,0.4) !important;
 }
@@ -247,3 +248,61 @@ margin-bottom: 15px !important;
     left: 15vw;
     position:relative;
   }
+
+
+
+
+
+
+
+
+
+
+
+.jumping-dots-loader {
+
+    border-radius: 100%;
+    position: relative;
+    margin: 0 auto
+}
+
+.jumping-dots-loader span {
+    display: inline-block;
+    margin: 10px;
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    background-color: rgba(241, 83, 110, 0.8);
+
+}
+
+.jumping-dots-loader span:nth-child(1) {
+    animation: bounce 1s ease-in-out infinite
+}
+
+.jumping-dots-loader span:nth-child(2) {
+    animation: bounce 1s ease-in-out 0.33s infinite
+}
+
+.jumping-dots-loader span:nth-child(3) {
+    animation: bounce 1s ease-in-out 0.66s infinite
+}
+
+@keyframes bounce {
+
+    0%,
+    75%,
+    100% {
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+        transform: translateY(0)
+    }
+
+    25% {
+        -webkit-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+        transform: translateY(-10px)
+    }
+}
