--- a/chat-frontend/src/app/chat/chat.component.css
+++ b/chat-frontend/src/app/chat/chat.component.css
@@ -37,3 +37,10 @@
         z-index: 1;
         position:inherit;
       }
+      .body{
+        height: 100vh;
+        width: 100vw;
+      }
+      .col-lg-5 col-xl-4 mb-4 mb-md-0{
+            border-radius: 15px;
+      }
