--- a/chat-frontend/src/app/footer/footer.component.html
+++ b/chat-frontend/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
 
     <ul class="Footer-items" style="list-style: none; display: flex; padding: 0; margin: 0;">
       <li class="Footer-item" style="margin-right: 10px;">
-        <a target="_blank" href="https://twitter.com/JeremBoo" class="Footer-link">
+        <a target="_blank" href="https://web.facebook.com/vibusha.kannangara" class="Footer-link">
           <span class="Footer-icon fa fa-facebook"></span>
         </a>
       </li>
