--- a/chat-frontend/src/app/chat-messages/chat-messages.component.html
+++ b/chat-frontend/src/app/chat-messages/chat-messages.component.html
@@ -46,11 +46,11 @@
             let i = index
           "
         >
-          <app-chat-message
-            [message]="messageCtrl.value"
-            [user]="this.users?.[messageCtrl.value.senderId]"
-            [targetUserID]="targetUserId"
-          ></app-chat-message>
+        <app-chat-message
+        [message]="messageCtrl.value"
+        [user]="this.users[messageCtrl.value.senderId]"
+        [targetUserID]="targetUserId"
+      ></app-chat-message>
         </div>
         <div *ngIf="send" class="jumping-dots-loader">
           <span></span> <span></span> <span></span>
